update AbstractStorageTest
- do UUID_1, UUID_2, UUID_3, UUID_4 UUID.randomUUID().
- add RESUME_COMPARATOR.
- fix getAllSorted().
- delete UUID_LENGTH, addSpaces().